--- a/SIRP/Framework/InitAllApplications.xaml
+++ b/SIRP/Framework/InitAllApplications.xaml
@@ -97,7 +97,6 @@
       <AssemblyReference>UiPath.Web</AssemblyReference>
       <AssemblyReference>UiPath.Platform</AssemblyReference>
       <AssemblyReference>UiPath.Web.Activities</AssemblyReference>
-      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
   <Flowchart sap2010:Annotation.AnnotationText="Open applications used in the process and do necessary initialization procedures (e.g., login)." DisplayName="Initialise All Applications" sap:VirtualizedContainerService.HintSize="844,1284.5" sap2010:WorkflowViewState.IdRef="Flowchart_3">
@@ -1155,7 +1154,7 @@
                         <PickBranch.Trigger>
                           <ui:WaitUiElementAppear FoundElement="{x:Null}" WaitActive="{x:Null}" WaitVisible="{x:Null}" sap2010:Annotation.AnnotationText="Check for any Generic Dialog boxes and attempt to click &quot;OK&quot;" ContinueOnError="True" DisplayName="Find Element - Dialog Box" sap:VirtualizedContainerService.HintSize="334,113" sap2010:WorkflowViewState.IdRef="WaitUiElementAppear_35">
                             <ui:WaitUiElementAppear.Target>
-                              <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="f06d4e55-dc91-4479-8ce7-623bd499b55d" Selector="&lt;wnd app='irs.exe' cls='*' isremoteapp='1' title='Incidents Recording System' /&gt;&lt;ctrl name='Incidents Recording System' role='dialog' /&gt;" TimeoutMS="5000">
+                              <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="f06d4e55-dc91-4479-8ce7-623bd499b55d" Selector="&lt;wnd app='irs.exe' cls='#32770' isremoteapp='1' title='*' /&gt;&lt;ctrl name='*' role='dialog' /&gt;" TimeoutMS="5000">
                                 <ui:Target.WaitForReady>
                                   <InArgument x:TypeArguments="ui:WaitForReady" />
                                 </ui:Target.WaitForReady>
@@ -1192,7 +1191,7 @@
                                   </ui:CursorPosition>
                                 </ui:Click.CursorPosition>
                                 <ui:Click.Target>
-                                  <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="b2e6efd4-8366-4a26-95d9-7647a383f386" InformativeScreenshot="bb49507916a817cb005a539f32a6cda9" Selector="&lt;wnd app='irs.exe' cls='#32770' isremoteapp='1' title='Incidents Recording System' /&gt;&lt;wnd ctrlid='2' title='OK' /&gt;">
+                                  <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="b2e6efd4-8366-4a26-95d9-7647a383f386" InformativeScreenshot="bb49507916a817cb005a539f32a6cda9" Selector="&lt;wnd app='irs.exe' cls='#32770' isremoteapp='1' title='*' /&gt;&lt;wnd ctrlid='2' title='OK' /&gt;">
                                     <ui:Target.TimeoutMS>
                                       <InArgument x:TypeArguments="x:Int32" />
                                     </ui:Target.TimeoutMS>
